hphp/hack/test/typecheck/errors/4339-class_property_initializer_does_not_match_hint.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class Foo {
  public int $x = "nope";
}
